--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -38,6 +38,12 @@
         </dependency>
 
 		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-validator</artifactId>
+    		<version>6.0.10.Final</version>
+		</dependency>
+
+		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
